{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 32,
  "lineage": "9583fdca-0d5e-43a0-f325-55f9c1598774",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0422a8964f3df4502",
            "association_id": "eipassoc-044f1bf5e41e544ee",
            "domain": "vpc",
            "id": "eipalloc-0422a8964f3df4502",
            "instance": "i-0a39bdc23a9b41451",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0ed7847d0239b80fd",
            "private_dns": "ip-10-0-1-169.eu-west-1.compute.internal",
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-52-19-120-202.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.120.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins_eip"
            },
            "tags_all": {
              "Name": "jenkins_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.compute.aws_instance.jenkins_server",
            "module.compute.aws_key_pair.tutorial_kp",
            "module.compute.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.tutorial_jenkins_sg",
            "module.vpc.aws_subnet.tutorial_public_subnet",
            "module.vpc.aws_vpc.tutorial_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3f7dd2dc743e48a",
            "arn": "arn:aws:ec2:eu-west-1:829065352146:instance/i-0a39bdc23a9b41451",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a39bdc23a9b41451",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tutorial_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed7847d0239b80fd",
            "private_dns": "ip-10-0-1-169.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e43f4644ac54558",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051ec834b176e8cef",
            "tags": {
              "Name": "jenkins_server"
            },
            "tags_all": {
              "Name": "jenkins_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01000983d48a841fd"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.tutorial_kp",
            "module.compute.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.tutorial_jenkins_sg",
            "module.vpc.aws_subnet.tutorial_public_subnet",
            "module.vpc.aws_vpc.tutorial_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829065352146:security-group/sg-01000983d48a841fd",
            "description": "Security group for jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01000983d48a841fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "212.5.33.194/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tutorial_jenkins_sg",
            "name_prefix": "",
            "owner_id": "829065352146",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tutorial_jenkins_sg"
            },
            "tags_all": {
              "Name": "tutorial_jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee383adf463b53ff"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tutorial_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829065352146:internet-gateway/igw-087f311cdc0bcd671",
            "id": "igw-087f311cdc0bcd671",
            "owner_id": "829065352146",
            "tags": {
              "Name": "tutorial_igw"
            },
            "tags_all": {
              "Name": "tutorial_igw"
            },
            "vpc_id": "vpc-0ee383adf463b53ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829065352146:route-table/rtb-04de466c3383d5353",
            "id": "rtb-04de466c3383d5353",
            "owner_id": "829065352146",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087f311cdc0bcd671",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ee383adf463b53ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tutorial_igw",
            "module.vpc.aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0338a07bec2a524fc",
            "route_table_id": "rtb-04de466c3383d5353",
            "subnet_id": "subnet-051ec834b176e8cef"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tutorial_igw",
            "module.vpc.aws_route_table.tutorial_public_rt",
            "module.vpc.aws_subnet.tutorial_public_subnet",
            "module.vpc.aws_vpc.tutorial_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829065352146:subnet/subnet-051ec834b176e8cef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051ec834b176e8cef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829065352146",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial_public_subnet"
            },
            "tags_all": {
              "Name": "tutorial_public_subnet"
            },
            "vpc_id": "vpc-0ee383adf463b53ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tutorial_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tutorial_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829065352146:vpc/vpc-0ee383adf463b53ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-046a3de5f1625ea84",
            "default_route_table_id": "rtb-021405aaf90e35a4e",
            "default_security_group_id": "sg-0a3aa66e05a3f1271",
            "dhcp_options_id": "dopt-07cde861",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ee383adf463b53ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021405aaf90e35a4e",
            "owner_id": "829065352146",
            "tags": {
              "Name": "tutorial_vpc"
            },
            "tags_all": {
              "Name": "tutorial_vpc"
            }
          }
        }
      ]
    }
  ]
}